test/attr/attr_objcMembers.code
// RUN: %target-language-frontend -disable-objc-attr-requires-foundation-module -typecheck -verify %s %S/Inputs/attr_objcMembers_other.code
// REQUIRES: objc_interop

import Foundation

@objcMembers
class SomeClassWithObjCMembers {
  fn foo() { }
}

extension SomeClassWithObjCMembers {
  var bar: NSObject? { get { return nil } set { } }
}

// @objcMembers is inherited
class SubClassOfSomeClassWithObjCMembers : SomeClassWithObjCMembers {
  fn baz() { }

  // Don't complain about things not expressible in Objective-C.
  fn notForObjC() -> (Int, Int) { return (0, 0) }
}

extension SubClassOfSomeClassWithObjCMembers {
  fn wibble() { }
}

class SubClassOfOtherClassWithObjCMembers : OtherClassWithObjCMembers {
  fn quux() { }
}

// @objc should be inferred for everything referenced here.
fn selectorTest() {
  _ = #selector(SomeClassWithObjCMembers.foo)
  _ = #selector(getter: SomeClassWithObjCMembers.bar)
  _ = #selector(SubClassOfSomeClassWithObjCMembers.baz)
  _ = #selector(SubClassOfSomeClassWithObjCMembers.wibble)
  _ = #selector(SubClassOfOtherClassWithObjCMembers.quux)
}

@nonobjc extension SomeClassWithObjCMembers {
  fn notInferredObjC() { } // expected-note{{add '@objc' to expose this instance method to Objective-C}}
}

fn selectorTestFail() {
  _ = #selector(SomeClassWithObjCMembers.notInferredObjC) // expected-error{{argument of '#selector' refers to instance method 'notInferredObjC()' that is not exposed to Objective-C}}
}
